Address some review comments